--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teste-firebase-functions",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Projeto criado para fins de teste da empresa SuperFrete",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,8 @@
     "start:prod": "node -r dotenv/config dist/src/server.js | pino-pretty",
     "start:dev": "npx nodemon -r dotenv/config --exec ts-node --files src/server.ts | pino-pretty",
     "prettier": "npx prettier --write --ignore-unknown .",
-    "test:cov": "jest --coverage"
+    "test": "jest --silent",
+    "test:cov": "npm run test --coverage"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "@types/jest": "^27.5.2",
     "@types/joi": "^17.2.3",
     "@types/pino": "^7.0.5",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "babel-eslint": "^10.1.0",
@@ -36,6 +38,7 @@
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.3.3",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.9.1",
     "ttypescript": "^1.5.12",
