--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,15 @@
 {
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "ui": {
+      "enabled": true
+    }
+  },
   "functions": [
     {
       "source": "functions",
