--- a/functions/package.json
+++ b/functions/package.json
@@ -1,32 +1,29 @@
 {
-  "name": "functions",
+  "name": "firebase-functions",
   "scripts": {
-    "lint": "eslint --ext .js,.ts .",
+    "lint": "biome check --apply src",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "serve": "npm run build && firebase emulators:start --only functions",
-    "shell": "npm run build && firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "start:dev": "npm run build && firebase emulators:start",
+    "deploy": "firebase deploy",
+    "test": "jest"
   },
   "engines": {
     "node": "18"
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@google-cloud/firestore": "^7.2.0",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.9.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.25.4",
-    "firebase-functions-test": "^3.1.0",
+    "@biomejs/biome": "^1.4.1",
+    "@swc/jest": "0.2.20",
+    "@types/jest": "27.4.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.0"
-  },
-  "private": true
+  }
 }
