--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "deploy": "firebase deploy --only functions,firestore",
     "logs": "firebase functions:log",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:related": "jest --findRelatedTests --passWithNoTests",
+    "prepare": "husky"
   },
   "engines": {
     "node": "18"
@@ -22,6 +24,8 @@
     "firebase-functions": "^4.3.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.16",
@@ -29,9 +33,12 @@
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.1.1",
+    "husky": "^9.0.10",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.1",
     "ts-jest": "^29.1.2",
     "typescript": "^4.9.0"
   },
